# supervised-learning-pwa-mpc

./: .gitignore  parc_agent_N_11_0  parc_agent_N_11_1  parc_agent_N_12_0  parc_agent_N_12_1  parc_agent_N_5_0  parc_agent_N_5_1  parc_agent_N_6_0  parc_agent_N_6_1  pyproject.toml  requirements.txt
examples/paper_2024/: cent_MLD_eval.py  evaluate.py  evaluate_open_loop.py  model.py  mpc.py  mpc_mld.py  train_supervised_oblique_tree.py  train_supervised_parc.py
examples/paper_2024/Matlab/: exp_mpc10.mat  exp_mpc11.mat  exp_mpc2.mat  exp_mpc3.mat  exp_mpc4.mat  exp_mpc5.mat  exp_mpc6.mat  exp_mpc7.mat  exp_mpc8.mat  exp_mpc9.mat  explicit_mpc.m  mpt3_test.m  plot_partitions.m
examples/paper_2024/results/: evaluate_closed_loop_N_10_learned_False.pkl  evaluate_closed_loop_N_10_learned_True.pkl  evaluate_closed_loop_N_12_learned_False.pkl  evaluate_closed_loop_N_12_learned_True.pkl  evaluate_closed_loop_N_5_learned_False.pkl  evaluate_closed_loop_N_5_learned_True.pkl  evaluate_open_loop_N_12.pkl  evaluate_open_loop_N_5.pkl  parc_agent_N_10  parc_agent_N_10_0  parc_agent_N_10_1  parc_agent_N_11  parc_agent_N_11_0  parc_agent_N_11_1  parc_agent_N_12  parc_agent_N_12_0  parc_agent_N_12_1  parc_agent_N_5  parc_agent_N_5_0  parc_agent_N_5_1  parc_agent_N_6  parc_agent_N_6_0  parc_agent_N_6_1  parc_agent_N_7  parc_agent_N_7_0  parc_agent_N_7_1  parc_agent_N_8  parc_agent_N_8_0  parc_agent_N_8_1  parc_agent_N_9  parc_agent_N_9_0  parc_agent_N_9_1  training_N_10.pkl  training_N_11.pkl  training_N_12.pkl  training_N_5.pkl  training_N_6.pkl  training_N_7.pkl  training_N_8.pkl  (+1 more)
(+32 files in other folders)
