[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slpwampc"
version = "0.0.1"
authors = [
  { name="Samuel Mallick", email="sam.mallick.97@gmail.com" },
]
description = "Supervised learning methods for training learning-based model predictive controllers for piecewise affine systems."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/SamuelMallick/supervised-learning-pwa-mpc"

[tool.setuptools]
license-files = [
	"LICENSE",
]

[tool.isort]
profile = "black"
